turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:2: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var c:Color
      ^DiskFour:2: error: local variables must be initialized
  var c:Color
      ^